# bookamine

./: .bumpversion.cfg  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
app/: alignment.py  config.py  main.py  models.py  parsers.py  services.py
app/routes/: __init__.py  audio.py  chapters.py  pages.py  sessions.py
app/services/: __init__.py  audio.py  chapter_matching.py  session.py  transcription.py
app/static/: collapsible.mjs  reader.js  reader_render.mjs
app/templates/: index.html
tests/: test_alignment.py  test_app.py  test_collapsible.mjs  test_parsers.py  test_reader_render.mjs
