[project]
name = "bookamine"
version = "1.0.0.dev2"
description = "A Self-hosted audiobook/ebook sync tool for doomscrolling!"
license = "AGPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "ebooklib>=0.19",
  "fastapi>=0.116.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.20",
  "rapidfuzz>=3.14.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
]
transcribe = [
  "openai-whisper>=20250625",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
]
